added environment.html and table to groups

--- a/public/assets/js/environment .html
+++ b/public/assets/js/environment .html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <h1>Select the options that best describe your current workout enviroment</h1>
+    <h1>Select the options that best describe your current workout environment</h1>
 
     <div class="container">
-        <strong>Which of these do you have available to workout?</strong>
+        <strong>Which of the following do you have available to workout?</strong>
         <div class="form-check">
             <input class="form-check-input" type="radio" name="barbell" id=1 value="barbell">
             <label class="form-check-label" for=1>
