minor touch-ups

--- a/public/assets/environment.html
+++ b/public/assets/environment.html
@@ -69,14 +69,14 @@
         <div class="form-check">
             <input class="form-check-input" type="radio" name="swiss-ball" id=5 value="swiss-ball">
             <label class="form-check-label" for=5>
-            Swiss ball
+            Medicine/weight ball
                 </label>
         </div>
 
         <div class="form-check">
             <input class="form-check-input" type="radio" name="sz-bar" id=2 value="sz-bar">
             <label class="form-check-label" for=2>
-            SZ-bar 
+            EZ-bar 
                 </label>
         </div>
 
