--- a/public/assets/environment.html
+++ b/public/assets/environment.html
@@ -18,80 +18,84 @@
     <div class="container">
         <strong>Which of the following do you have available to workout?</strong>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="barbell" id=1 value="barbell">
+            <input class="form-check-input" type="checkbox" name="barbell" id=1 value="barbell">
             <label class="form-check-label" for=1>
            Barbell 
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="bench" id=8 value="bench">
+            <input class="form-check-input" type="checkbox" name="bench" id=8 value="bench">
             <label class="form-check-label" for=8>
            Bench
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="dumbbell" id=3 value="dumbbell">
+            <input class="form-check-input" type="checkbox" name="dumbbell" id=3 value="dumbbell">
             <label class="form-check-label" for=3>
            Dumbbell
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="gym-mat" id=4 value="gym-mat">
+            <input class="form-check-input" type="checkbox" name="gym-mat" id=4 value="gym-mat">
             <label class="form-check-label" for=4>
            Gym mat
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="incline-bench" id=9 value="incline-bench">
+            <input class="form-check-input" type="checkbox" name="incline-bench" id=9 value="incline-bench">
             <label class="form-check-label" for=9>
             Incline bench
             </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="Kettlebell" id=10 value="kettlebell">
+            <input class="form-check-input" type="checkbox" name="Kettlebell" id=10 value="kettlebell">
             <label class="form-check-label" for=10>
             Kettlebell
             </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="pull-up-bar" id=6 value="pull-up-bar">
+            <input class="form-check-input" type="checkbox" name="pull-up-bar" id=6 value="pull-up-bar">
             <label class="form-check-label" for=6>
             Pull-up bar
             </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="swiss-ball" id=5 value="swiss-ball">
+            <input class="form-check-input" type="checkbox" name="swiss-ball" id=5 value="swiss-ball">
             <label class="form-check-label" for=5>
             Medicine/weight ball
                 </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="sz-bar" id=2 value="sz-bar">
+            <input class="form-check-input" type="checkbox" name="sz-bar" id=2 value="sz-bar">
             <label class="form-check-label" for=2>
             EZ-bar 
                 </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="d">
-            <label class="form-check-label" for="exampleRadios4">
+            <input class="form-check-input" type="checkbox" name="default" id="default" value="d">
+            <label class="form-check-label" for="default">
             None of the above
                 </label>
         </div>
+
+        <button type="button" class="btn btn-primary">Submit</button>
+    </div>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script>src="./js/environment.js"</script>
 </body>
 
 </html>
