--- a/public/assets/environment.html
+++ b/public/assets/environment.html
@@ -18,76 +18,76 @@
     <div class="container">
         <strong>Which of the following do you have available to workout?</strong>
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="barbell" id=1 value="barbell">
-            <label class="form-check-label" for=1>
+            <input class="form-check-input" type="checkbox" name="barbell" id="barbell" value="1">
+            <label class="form-check-label" for="barbell">
            Barbell 
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="bench" id=8 value="bench">
-            <label class="form-check-label" for=8>
+            <input class="form-check-input" type="checkbox" name="bench" id="bench" value="8">
+            <label class="form-check-label" for="bench">
            Bench
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="dumbbell" id=3 value="dumbbell">
-            <label class="form-check-label" for=3>
+            <input class="form-check-input" type="checkbox" name="dumbbell" id="dumbbell" value="3">
+            <label class="form-check-label" for="dumbbell">
            Dumbbell
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="gym-mat" id=4 value="gym-mat">
-            <label class="form-check-label" for=4>
+            <input class="form-check-input" type="checkbox" name="gym-mat" id="gym-mat" value="4">
+            <label class="form-check-label" for="gym-mat">
            Gym mat
            </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="incline-bench" id=9 value="incline-bench">
-            <label class="form-check-label" for=9>
+            <input class="form-check-input" type="checkbox" name="incline-bench" id="incline-bench" value="9">
+            <label class="form-check-label" for="incline-bench">
             Incline bench
             </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="Kettlebell" id=10 value="kettlebell">
-            <label class="form-check-label" for=10>
+            <input class="form-check-input" type="checkbox" name="Kettlebell" id="kettlebell" value="10">
+            <label class="form-check-label" for="kettlebell">
             Kettlebell
             </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="pull-up-bar" id=6 value="pull-up-bar">
-            <label class="form-check-label" for=6>
+            <input class="form-check-input" type="checkbox" name="pull-up-bar" id="pull-up-bar" value="6">
+            <label class="form-check-label" for="pull-up-bar">
             Pull-up bar
             </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="swiss-ball" id=5 value="swiss-ball">
-            <label class="form-check-label" for=5>
+            <input class="form-check-input" type="checkbox" name="swiss-ball" id="swiss-ball" value="5">
+            <label class="form-check-label" for="swiss-ball">
             Medicine/weight ball
                 </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="sz-bar" id=2 value="sz-bar">
-            <label class="form-check-label" for=2>
+            <input class="form-check-input" type="checkbox" name="sz-bar" id="ez-bar" value="2">
+            <label class="form-check-label" for="ez-bar">
             EZ-bar 
                 </label>
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="default" id="default" value="d">
+            <input class="form-check-input" type="checkbox" name="default" id="default" value="">
             <label class="form-check-label" for="default">
             None of the above
-                </label>
+            </label>
         </div>
 
-        <button type="button" class="btn btn-primary">Submit</button>
+        <button type="button" class="btn btn-primary" id="submit">Submit</button>
     </div>
 
         <!-- Optional JavaScript -->
@@ -95,7 +95,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script>src="./js/environment.js"</script>
+        <script type="text/javascript" src="js/environment.js"></script>
 </body>
 
 </html>
