--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -29,10 +29,12 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="password-input" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-default">Login</button>
+                    <button type="submit" href="#" class="btn btn-primary">Log in</button>
+                    <!-- <a href="#" class="btn btn-primary">Log in</a> -->
                 </form>
                 <br />
                 <p>Or sign up <a href="/signup">here</a></p>
+
             </div>
         </div>
     </div>
