added logout functionality

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -15,7 +15,11 @@
     <h2 style="text-align:center">Welcome To Your Personalized Home Workout!</h2>
 
 
-    </h3 class="log-in"><a href="/login">Log-in</a></h3>
+    </h3 class="log-out"><a href="/logout">Log Out</a></h3>
+
+    </h3 class="updateGym"><a href="/environment">Update Gym</a></h3>
+
+    </h3 class="generateRoutine"><a href="/routine">Generate Routine</a></h3>
 
     <!--this is to create a new group -->
     <h2> Create a Group</h2>
