--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -5,67 +5,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>Document</title>
+    <link href="css/style.css" rel="stylesheet">
+    <title>NoGym Home</title>
 </head>
 
 <body>
-    <!-- This file to be renamed index.handlebars -->
-    <h1 style="text-align:center">NoGym!</h1>
+    <!-- NAVBAR-->
+    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <a href="/index" class="navbar-brand">
+                <!-- Logo Image     WHEN LOADED TO SERVER ADD /ASSETS INTO THE PICTURE ROUTE -->
+                <img src="./images/multi.jfif" width="50" alt="" class="d-inline-block align-middle mr-2">
+                <!-- Logo Text -->
+                <span class="font-weight-bold">NoGym</span>
+            </a>
 
-    <h2 style="text-align:center">Welcome To Your Personalized Home Workout!</h2>
-
-
-    </h3 class="log-in"><a href="/login">Log-in</a></h3>
-
-    <!--this is to create a new group -->
-    <h2> Create a Group</h2>
-    <form class="create-form">
-        <!-- group owner input -->
-        <div class="form-group">
-            <label for="group">Group Owner:</label>
-            <input type="text" id="owner" name="name">
+            <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+            <!-- Navbar buttons -->
+            <div id="navbarSupportedContent" class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="/login" class="nav-link">Log in</a></li>
+                    <li class="nav-item"><a href="/signup" class="nav-link">Sign up</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Join a Group</a></li>
+                </ul>
+            </div>
         </div>
-        <!-- group name input  -->
-        <div class="form-group">
-            <label for="group">Group Name:</label>
-            <input type="text" id="group" name="name">
+    </nav>
+
+    <div class="container">
+        <!-- Top of the page - header  -->
+        <div class="header">
+            <h1 style="text-align:center">Welcome To Your Personalized Home Workout!</h1>
+            <p> Working out from home has prevented us from being able to workout with our friends, and some people have different home workout environments and restrictions, so we want to help people workout and stary connected to their workout-group! We
+                We hope you will find NoGym useful in your quest for a healthier you.</p>
+        </div>
+        <br>
+
+        <!--Card to create a new group -->
+        <div class="container">
+            <div class="row my-12">
+                <div class="card card col-sm-5 mx-3">
+                    <h5 class="card-header">Create a Group!</h5>
+                    <div class="card-body">
+                        <p>Create your own group and invite friends to join your group workout!</p>
+                        <form class="create-form ">
+                            <!-- group owner input -->
+                            <div class="form-group ">
+                                <label for="group ">Group Owner:</label>
+                                <input type="text " id="owner " name="name ">
+                            </div>
+                            <!--Break -->
+                            <br>
+                            <!-- group name input  -->
+                            <div class="form-group ">
+                                <label for="group ">Group Name:</label>
+                                <input type="text " id="group " name="name ">
+                            </div>
+                            <!--button -->
+                            <br>
+                            <a href="#" class="btn btn-info">Create a Group</a>
+                        </form>
+                    </div>
+                </div>
+
+                <!--Card "Why create groups"-->
+                <div class="card card col-sm-5">
+                    <h5 class="card-header">Why create groups?</h5>
+                    <div class="card-body">A group is created to give access to the same workout to a limited number of people that will all be participating in the workouts. Each group member will enter information about their environment and our app will take into consideration
+                        every member's environment to provide the group with a workout that all group members can do within their environment.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <button type="submit">Create a Group</button>
-    </form>
+        <!--Break -->
+        <br>
 
-    <!--this is to create a new group -->
-    <h2> View Groups</h2>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Group Name</th>
-                <th scope="col">Ranking</th>
-                <th scope="col">Number of Members</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Killers</td>
-                <td>#3</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>UCLA</td>
-                <td>#2</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>MKL</td>
-                <td>#1</td>
-                <td>9</td>
-            </tr>
-        </tbody>
-    </table>
+        <!--table that shows groups and rankings -->
+        <h2 style="text-align:center"> View Groups</h2>
+        <table class="table table-striped table-sm ">
+            <div class="card card col-sm-12">
+                <thead>
+                    <tr>
+                        <th scope="col ">#</th>
+                        <th scope="col ">Group Name</th>
+                        <th scope="col ">Ranking</th>
+                        <th scope="col ">Number of Members</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row ">1</th>
+                        <td>Killers</td>
+                        <td>#1</td>
+                        <td>9</td>
+                    </tr>
+                    <tr>
+                        <th scope="row ">2</th>
+                        <td>UCLA</td>
+                        <td>#2</td>
+                        <td>11</td>
+                    </tr>
+                    <tr>
+                        <th scope="row ">3</th>
+                        <td>MKL</td>
+                        <td>#3</td>
+                        <td>9</td>
+                    </tr>
+                </tbody>
+            </div>
+        </table>
+    </div>
 
 </body>
 
