--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -6,16 +6,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
+    <!-- NAVBAR-->
+    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <a href="/index" class="navbar-brand">
+                <!-- Logo Image     WHEN LOADED TO SERVER ADD /ASSETS INTO THE PICTURE ROUTE -->
+                <img src="./images/multi.jfif" width="50" alt="" class="d-inline-block align-middle mr-2">
+                <!-- Logo Text -->
+                <span class="font-weight-bold">NoGym</span>
+            </a>
+
+            <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+            <!-- Navbar buttons -->
+            <div id="navbarSupportedContent" class="collapse navbar-collapse">
             </div>
         </div>
     </nav>
+
+    <!--Log in form -->
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -29,8 +42,7 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="password-input" placeholder="Password">
                     </div>
-                    <button type="submit" href="#" class="btn btn-primary">Log in</button>
-                    <!-- <a href="#" class="btn btn-primary">Log in</a> -->
+                    <button type="submit" href="#" class="btn btn-info">Log in</button>
                 </form>
                 <br />
                 <p>Or sign up <a href="/signup">here</a></p>
