--- a/public/assets/home.html
+++ b/public/assets/home.html
@@ -31,7 +31,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                     <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Join a Group</a></li>
+                    <li class="nav-item"><a href="/virtualgym" class="nav-link">Virtual Gym</a></li>
                 </ul>
             </div>
         </div>
