--- a/public/assets/signup.html
+++ b/public/assets/signup.html
@@ -14,9 +14,9 @@
     <!-- NAVBAR-->
     <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
         <div class="container">
-            <a href="/index" class="navbar-brand">
+            <a href="/home" class="navbar-brand">
                 <!-- Logo Image     WHEN LOADED TO SERVER ADD /ASSETS INTO THE PICTURE ROUTE -->
-                <img src="./images/multi.jfif" width="50" alt="" class="d-inline-block align-middle mr-2">
+                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2">
                 <!-- Logo Text -->
                 <span class="font-weight-bold">NoGym</span>
             </a>
@@ -31,14 +31,16 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Sign Up Form</h2>
+                <div class="welcome">
+                    <p>Sign up for free!</p>
+                </div>
                 <form class="signup">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label class=pwEm for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" id="email-input" placeholder="Email" />
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
+                        <label class=pwEm for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="password-input" placeholder="Password" />
                     </div>
                     <div style="display: none" id="alert" class="alert alert-danger" role="alert">
@@ -48,7 +50,7 @@
                     <button type="submit" href="#" class="btn btn-info">Sign up</button>
                 </form>
                 <br />
-                <p>Or log in <a href="/login">here</a></p>
+                <h3>Or log in <a href="/login">here</a></h3>
             </div>
         </div>
     </div>
