widgets, buttons, and navbar updated

--- a/public/assets/virtualgym.html
+++ b/public/assets/virtualgym.html
@@ -32,6 +32,7 @@
                     <li class="nav-item"><a href="/routine" class="nav-link">All Exercises</a></li>
                     <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
                     <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
+                    <li class="nav-item"><a href="/about" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                 </ul>
             </div>
