--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -6,8 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
 </head>
@@ -18,7 +16,7 @@
         <div class="container">
             <a href="/home" class="navbar-brand">
                 <!-- Logo Image     WHEN LOADED TO SERVER ADD /ASSETS INTO THE PICTURE ROUTE -->
-                <img src="./images/png/ngpurple.png" width="50" alt="" class="d-inline-block align-middle mr-2">
+                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2">
                 <!-- Logo Text -->
                 <span class="font-weight-bold">NoGym</span>
             </a>
@@ -47,7 +45,7 @@
                         <label class=pwEm for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="password-input" placeholder="Password">
                     </div>
-                    <button type="submit" href="#" class="btn btn-info">Log in</button>
+                    <button type="submit" href="#" class="btn btn-info btn-lg">Log in</button>
                 </form>
                 <br />
                 <h3>Or sign up <a href="/signup">here</a></h3>
