--- a/public/assets/home.html
+++ b/public/assets/home.html
@@ -45,11 +45,11 @@
         <!-- Top of the page - header  -->
         <div class="specialCard">
             <div class="row my-12">
-                <div class="card card col-sm-12">
+                <div class="card card col-sm-8">
                     <h5 class="card-header">Welcome To Your Personalized Home Workout!</h5>
                     <div class="card-body">
                         <p>
-                            <B>We are here to provide you with a virtual gym that is tailored for you!</B>
+                            <B>We are here to provide you with a virtual gym that is tailored to you and your current workout environment!</B>
                         </p>
                         <p>Here's what you can expect from NoGym:</p>
                         <p>&#8692
@@ -57,21 +57,20 @@
                         <p>&#8692
                             <B>Virtual gym:</B> Your own personalized workout routine that fits within your current work environment and takes into consideration whether or not you have workout equipment.</p>
                         <p>&#8692
-                            <B>Update Gym:</B> YOu are able to update your gym by changing the equipment options that you want to incorporate into your routine.</p>
+                            <B>Update Gym:</B> You are able to update your gym by changing the equipment options that you want to incorporate into your routine.</p>
                         <p>We hope you will find NoGym useful in your quest for a healthier you.</p>
                         </p>
 
                     </div>
+
+
                 </div>
             </div>
         </div>
-
+        <!-- potentilly relative div -->
         <div class="bmi">
             <!-- CDC calculator -->
             <iframe src="https://www.cdc.gov/healthyweight/assessing/adult-widget/iframe.html" frameborder="0" style="border: none;" width="170" height="395">Please upgrade to web browser that supports iframes to see this CDC widget.</iframe>
-
-            <!--white calculator-->
-            <iframe src="https://www.mealpro.net/bmi/?color=c1c1c1" frameborder="0" width="500" height="360" style="max-width: 100%"></iframe>
         </div>
 
 
