--- a/public/assets/routine.html
+++ b/public/assets/routine.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=McLaren&family=Padauk:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- Bootstrap CSS - Navbar to the left -->
@@ -41,7 +43,19 @@
 
 
     <!-- Routine -->
-    <div id="routine"></div>
+    <div id="routine" class="mxb-3">
+        <div class="row">
+            <div data-spy="scroll" class="musclegroup col-md-3" id="12"><span class="bodytitle">Back</span></div>
+            <div class="musclegroup col-md-3" id="8"><span class="bodytitle">Arms</span></div>
+            <div class="musclegroup col-md-3" id="11"><span class="bodytitle">Chest</span></div>
+        </div>
+        <div class="row">
+            <div class="musclegroup col-md-3" id="9"><span class="bodytitle">Legs</span></div>
+            <div class="musclegroup col-md-3" id="10"><span class="bodytitle">Abs</span></div>
+            <div class="musclegroup col-md-3" id="13"><span class="bodytitle">Shoulders</span></div>
+        </div>
+
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
