--- a/public/assets/routine.html
+++ b/public/assets/routine.html
@@ -43,13 +43,13 @@
 
 
     <!-- Routine -->
-    <div id="routine" class="mxb-3">
-        <div class="row">
+    <div id="routine" class="mx-3 mb-3">
+        <div class="row d-flex justify-content-center">
             <div data-spy="scroll" class="musclegroup col-md-3" id="12"><span class="bodytitle">Back</span></div>
             <div class="musclegroup col-md-3" id="8"><span class="bodytitle">Arms</span></div>
             <div class="musclegroup col-md-3" id="11"><span class="bodytitle">Chest</span></div>
         </div>
-        <div class="row">
+        <div class="row d-flex justify-content-center">
             <div class="musclegroup col-md-3" id="9"><span class="bodytitle">Legs</span></div>
             <div class="musclegroup col-md-3" id="10"><span class="bodytitle">Abs</span></div>
             <div class="musclegroup col-md-3" id="13"><span class="bodytitle">Shoulders</span></div>
