--- a/public/assets/aboutus.html
+++ b/public/assets/aboutus.html
@@ -54,7 +54,7 @@
 
             <!-- card for Terrapin (photo, brief description and email info -->
             <div class="card us">
-                <img src="./images/tarrapin.jpg" class="card-img-top" alt="tarrapin" style=>
+                <img src="./images/terrapin.jpg" class="card-img-top" alt="tarrapin" style=>
 
                 <div class="card-body">
                     <h3 class="card-title dev-title">Terrapin Christensen</h3>
