added calory calculator

--- a/public/assets/home.html
+++ b/public/assets/home.html
@@ -21,12 +21,9 @@
     <!-- NAVBAR-->
     <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
         <div class="container" id="navbar">
-
             <a href="/index" class="navbar-brand">
                 <!-- Logo Image     WHEN LOADED TO SERVER ADD /ASSETS INTO THE PICTURE ROUTE -->
-                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2">
-
-                <!-- Logo Text -->
+                <img src="./images/png/ngPurple.png" width="50" alt="" class="d-inline-block align-middle mr-2" <!-- Logo Text -->
                 <span class="font-weight-bold">NoGym</span>
             </a>
 
@@ -37,7 +34,7 @@
                     <li class="nav-item"><a href="/routine" class="nav-link">All Exercises</a></li>
                     <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
                     <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
-                    <li class="nav-item"><a href="/about" class="nav-link">About Us</a></li>
+                    <li class="nav-item"><a href="/aboutus" class="nav-link">About Us</a></li>
                     <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                 </ul>
             </div>
@@ -49,40 +46,32 @@
         <!-- Top of the page - header  -->
         <div class="row">
             <h5 class="card-header">Welcome To Your Personalized Home Workout!</h5>
-            <div class="bmi col-md-4">
+
+            <div class="bmi col-md-2">
                 <!-- CDC calculator -->
                 <iframe src="https://www.cdc.gov/healthyweight/assessing/adult-widget/iframe.html" frameborder="0" style="border: none;" width="170" height="395">Please upgrade to web browser that supports iframes to see this CDC widget.</iframe>
             </div>
-            <div class="specialCard col-md-8">
-                <div class="row my-12">
 
-                    <div class="card card col-sm-8">
-                        <div class="card-body">
-                            <p>
-                                <B>We are here to provide you with a virtual gym that is tailored to you and your current workout environment!</B>
-                            </p>
-                            <p>Here's what you can expect from NoGym:</p>
-                            <p>&#8692
-                                <B><a href="/routine">All Exercises:</a></B> An extensive list of exercises you can do from home with or without equipment.</p>
-                            <p>&#8692
-                                <B><a href="/virtualgym">Virtual Gym:</a></B> Your own personalized workout routine that fits within your current work environment and takes into consideration whether or not you have workout equipment.</p>
-                            <p>&#8692
-                                <B><a href="/environment">Update Gym:</a></B> You are able to update your gym by changing the equipment options that you want to incorporate into your routine.</p>
-                            <p>We hope you will find NoGym useful in your quest for a healthier you.</p>
-                            </p>
-
-                        </div>
-
-
-                    </div>
+            <div class="specialCard col-md-6">
+                <div class="card-body">
+                    <p>
+                        <B>We are here to provide you with a virtual gym that is tailored to you and your current workout environment!</B>
+                    </p>
+                    <p>Here's what you can expect from NoGym:</p>
+                    <p>&#8692
+                        <B><a href="/routine">All Exercises:</a></B> An extensive list of exercises you can do from home with or without equipment.</p>
+                    <p>&#8692
+                        <B><a href="/virtualgym">Virtual Gym:</a></B> Your own personalized workout routine that fits within your current work environment and takes into consideration whether or not you have workout equipment.</p>
+                    <p>&#8692
+                        <B><a href="/environment">Update Gym:</a></B> You are able to update your gym by changing the equipment options that you want to incorporate into your routine.</p>
+                    <p>We hope you will find NoGym useful in your quest for a healthier you.</p>
+                    </p>
                 </div>
-
             </div>
-
+            <div class="bmi col-md-4">
+                <iframe scrolling="yes" frameborder="0" width="100%" height="460" src="https://www.mealpro.net/dietanalysis" title="My Diet Analysis Calculator" class="borderline" style="overflow:hidden; display:inline-block; float:middle"></iframe>
+            </div>
         </div>
-
-
-
 
     </div>
 
