edited readme, color scheme, added caloric calculator to the home page, removed divs from home page

--- a/public/assets/environment.html
+++ b/public/assets/environment.html
@@ -33,10 +33,11 @@
             <!-- Navbar buttons -->
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                     <li class="nav-item"><a href="/routine" class="nav-link">All Exercises</a></li>
-                    <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
                     <li class="nav-item"><a href="/virtualgym" class="nav-link">My Virtual Gym</a></li>
+                    <li class="nav-item"><a href="/environment" class="nav-link">Update Gym</a></li>
+                    <li class="nav-item"><a href="/aboutus" class="nav-link">About Us</a></li>
+                    <li class="nav-item"><a href="/logout" class="nav-link">Log Out</a></li>
                 </ul>
             </div>
         </div>
@@ -46,7 +47,7 @@
         <h1>Let's determine your current workout environment</h1>
 
         <div class="card card col-sm-12">
-            <h5 class="card-header">Which of the following do you have available to workout?</h5>
+            <h5 class="card-header" style="font-weight: bolder;">Which of the following do you have available to workout?</h5>
             <div class="card-body">
 
                 <!-- <strong>Which of the following do you have available to workout?</strong> -->
